changing in index.html file and style.css file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
 </head>
 
 <body class="bg-gray-50 text-gray-800 font-sans">
@@ -44,7 +46,7 @@
     <!-- Header -->
 <header class="text-center py-16 px-4">
 
-    <h1 class="main-heading">
+    <h1 class="main-heading portal-title">
         MDU Rohtak PYQ
     </h1>
 
@@ -105,8 +107,7 @@
                 <p>Most repeated questions analyzed.</p>
             </div> 
         </div>
-
-git         <div class="feature-card">
+     <div class="feature-card">
             <i class="fa-solid fa-download feature-icon"></i>
             <div>
                 <h3>Easy Downloads</h3>
