Add Header and Mobile responsive

--- a/index.html
+++ b/index.html
@@ -25,8 +25,41 @@
             <div class="logo-box">M</div>
             <span class="portal-title">MDU PORTAL</span>
         </div>
+            <nav id="header-list">
+      <ul class="flex space-x-8 font-medium text-gray-700">
+        <li>
+          <a href="#" class="hover:text-blue-600 transition duration-300">
+            Syllabus of MDU Rohtak
+          </a>
+        </li>
 
-        <button id="menuBtn" class="menu-btn">
+        <li>
+          <a href="#" class="hover:text-blue-600 transition duration-300">
+            Previous Year Question Paper (PYQ)
+          </a>
+        </li>
+
+        <li>
+          <a href="#" class="hover:text-blue-600 transition duration-300">
+            Handwritten Notes
+          </a>
+        </li>
+
+        <li>
+          <a href="#" class="hover:text-blue-600 transition duration-300">
+            Revision Papers (RG)
+          </a>
+        </li>
+
+        <li>
+          <a href="Admin.html" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition duration-300">
+            Admin
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+        <button id="menuBtn" class="menu-btn" hidden>
             <i class="fa-solid fa-bars"></i>
             
         </button>
