Add background image

--- a/style.html
+++ b/style.html
@@ -9,10 +9,6 @@
 <body>
   
   <!-- ===== TOP HEADER LOGO ===== -->
-    <div class="header">
-        <img src="https://dgi230notes.weebly.com/uploads/8/4/7/1/84714230/published/bitmap8663660307655580070.png?1571066066" alt="Office Logo">
-    </div>
-
   <!-- Main Container -->
   <div class="container">
 
@@ -63,6 +59,15 @@
   <div id="paperList"></div>
   <p id="result"></p>
 </div>
+  </div>
+  <div class="bubbles">
+    <img src="./images/bubble.png" alt="">
+    <img src="./images/bubble.png" alt="">
+    <img src="./images/bubble.png" alt="">
+    <img src="./images/bubble.png" alt="">
+    <img src="./images/bubble.png" alt="">
+    <img src="./images/bubble.png" alt="">
+    <img src="./images/bubble.png" alt="">
   </div>
   <script src="first.js"></script>
 </body>
