Changing all the file

--- a/Admin.html
+++ b/Admin.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <div class="container">
-        <span class="back" onclick="history.back()"><i class="fa-solid fa-arrow-left" style="position: relative; top: 3px; cursor: pointer;" onclick="history.back()"></i>Back</span>
+        <span class="back">
+  <i class="fa-solid fa-arrow-left"
+     style="position: relative; top: 3px; cursor: pointer;"
+     onclick="goBack()"></i> 
+</span>
         <div class="form-box" id="login-form">
             <form action="">
                 <h1>Admin</h1>
