--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
     class="main-heading text-2xl sm:text-2xl md:text-4xl lg:text-5xl whitespace-nowrap overflow-hidden">
     Syllabus of MDU Rohtak
 </h1>
-
-        <hr class="divider">
-
+        <h5 class="text-center text-sm md:text-base font-medium mb-3 
+           bg-clip-text text-transparent 
+           bg-gradient-to-r from-blue-500 via-purple-500 to-pink-500">
+    Only B.Tech, M.Tech, BCA, MCA, BA... Related Paper Search
+</h5>
         <div class="search-box">
             <input
                 id="searchCourse"
