Adding new Contect Page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
                         Revision Papers (RG)
                     </a>
                 </li>
-
+                 
+                <li>
+                    <a href="contact.html" class="hover:text-blue-600 transition duration-300">
+                        Contact Us
+                    </a>
+                </li>
                 <li>
                     <a href="Admin.html" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition duration-300">
                         Admin
